@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -13,12 +14,12 @@
     <packaging>hpi</packaging>
     <name>Gerrit Trigger</name>
     <description>Integrates with Gerrit code review.</description>
-    <url>https://github.com/jenkinsci/gerrit-trigger-plugin/blob/master/docs/README.adoc</url>
+    <url>https://github.com/jenkinsci/${project.artifactId}-plugin/blob/master/docs/README.adoc</url>
 
     <licenses>
         <license>
-            <name>MIT</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <name>MIT License</name>
+            <url>https://opensource.org/licenses/MIT</url>
             <comments>
                 Copyright 2010 Sony Ericsson Mobile Communications. All rights reserved.
                 Copyright 2012 Sony Mobile Communications AB. All rights reserved.
@@ -56,14 +57,13 @@
         <jenkins.version>2.346.3</jenkins.version>
         <revision>2.36.1</revision>
         <changelist>-SNAPSHOT</changelist>
-        <gitHubRepo>jenkinsci/gerrit-trigger-plugin</gitHubRepo>
+        <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
         <!--<java.level>8</java.level>-->
         <no-test-jar>false</no-test-jar>
         <findbugs.failOnError>false</findbugs.failOnError>
         <!--<concurrency>0.5C</concurrency>-->
         <checkstyle.version>2.16</checkstyle.version>
         <surefire.rerunFailingTestsCount>3</surefire.rerunFailingTestsCount>
-        <reuseForks>false</reuseForks>
         <forkCount>0.5C</forkCount>
         <spotbugs.threshold>High</spotbugs.threshold>
     </properties>
@@ -72,8 +72,13 @@
         <dependency>
             <groupId>com.sonymobile.tools.gerrit</groupId>
             <artifactId>gerrit-events</artifactId>
-	        <version>2.19.0</version>
+            <version>2.19.0</version>
             <exclusions>
+                <!-- Provided by core -->
+                <exclusion>
+                    <groupId>commons-io</groupId>
+                    <artifactId>commons-io</artifactId>
+                </exclusion>
                 <exclusion>
                     <!-- json-lib-2.4-jenkins-2 is provided by core/stapler -->
                     <groupId>net.sf.json-lib</groupId>
@@ -82,6 +87,11 @@
                 <exclusion>
                     <groupId>org.apache.httpcomponents</groupId>
                     <artifactId>httpclient</artifactId>
+                </exclusion>
+                <!-- Provided by core -->
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
                 </exclusion>
             </exclusions>
             <!-- New source is here: https://github.com/sonyxperiadev/gerrit-events -->
@@ -175,12 +185,6 @@
             <!-- Used for test with matrix permissions -->
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>matrix-auth</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymock</artifactId>
-            <version>3.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -295,7 +299,6 @@
                             <value>33849</value>
                         </property>
                     </systemProperties>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=380m</argLine>
                     <reuseForks>false</reuseForks>
                     <forkCount>${concurrency}</forkCount>
                 </configuration>
@@ -359,40 +362,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>animal-sniffer-maven-plugin</artifactId>
-                <configuration>
-                    <signature>
-                        <groupId>org.codehaus.mojo.signature</groupId>
-                        <artifactId>java18</artifactId>
-                        <version>1.0</version>
-                    </signature>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>check-java-api</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
 
-    <distributionManagement>
-        <repository>
-            <id>maven.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/releases</url>
-        </repository>
-    </distributionManagement>
-
     <scm>
-        <connection>scm:git:ssh://github.com/jenkinsci/gerrit-trigger-plugin.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/jenkinsci/gerrit-trigger-plugin.git</developerConnection>
-        <url>https://github.com/jenkinsci/gerrit-trigger-plugin</url>
+        <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
+        <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
+        <url>https://github.com/${gitHubRepo}</url>
         <tag>${scmTag}</tag>
     </scm>
 </project>
